# piper-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
piper/: Cargo.toml  build.rs
piper-test/: Cargo.toml
piper-test/src/: main.rs
piper/src/: core.rs  espeakng.rs  lib.rs  phonemize.rs  synth.rs  vits.rs  wave_writer.rs
