[package]
name = "piper"
version = "1.0.0"
edition = "2021"
links = "espeak-ng"

[dependencies]
ffi-support = "0.4.4"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num_cpus = "1.15.0"
once_cell = "1.18.0"
ort = { version = "1.15", default-features = true }
rayon = "1.7.0"
riff-wave = "0.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
build-target = "0.4"
fs_extra = "1.3"
